# csc_122_function_pointers

./: .gitignore  1_regular_function.cpp  2_simple_function_pointer.cpp  3_function_pointer_with_return.cpp  4.cpp  4_c_array_of_functions.cpp  5_cpp_array_of_functions.cpp  6.cpp  6_wrapper_function.cpp  7.cpp  8  8.cpp  8_cpp_sort_declared_function.cpp  CMakeLists.txt  Makefile  README.md  a.out
